--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
+    "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.11.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -24,6 +25,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
