--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.8.0",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "prisma": "^5.8.0",
