--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.8.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
     "framer-motion": "^10.18.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "prisma": "^5.8.0",
     "react": "^18",
